<resources>
    <string name="app_name">Lego News!</string>
    <string name="title_activity_news_app">NewsApp</string>
    <!--fragment_login & fragment_registration-->
    <string name="user_log_on">Вход</string>
    <string name="user_log_in">Войти</string>
    <string name="user_registration">Регистрация</string>
    <string name="user_login">Логин</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Пароль</string>
    <string name="user_repeat_password">Повторите пароль</string>
    <string name="user_agree">Согласен с правилами</string>
    <string name="user_registration_click">Зарегестрироваться</string>
    <!--bottom_nav_menu-->
    <string name="title_home">News</string>
    <string name="title_dashboard">Today</string>
    <string name="title_notifications">Profile</string>
    <!--fragment_dashboard & fragment_notifications-->
    <string name="text_dashboard">Meow?</string>
    <string name="your_useraname"><u>Your Useraname</u>:</string>
    <string name="your_email"><u>Your Email</u>:</string>
    <string name="your_password"><u>Your Password</u>:</string>
    <string name="your_xxx">xxx</string>
    <string name="your_clear">Выйти \n (очистить пользователя)</string>
    <!--fragment_home-->
    <string name="text_search">Поиск твоих новостей!</string>
    <string name="text_search_button">Go!</string>
    <string name="text_textNumber">Страница (от 1 до 5):</string>
    <string name="text_userNumber">1</string>
</resources>