<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".login_and_registration.LoginFragment">

    <Button
        android:id="@+id/logon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/background_button"
        android:text="@string/user_log_on"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registration"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_registration"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/user_login"
        android:textSize="18sp"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@+id/logon"
        tools:layout_editor_absoluteX="60dp" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/user_login"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/user_loginto_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/background_button"
        android:text="@string/user_log_on"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password" />
</androidx.constraintlayout.widget.ConstraintLayout>